A number of improvements and bug fixes: * cropped regions are now remembered so that they can be more easily customized * show/hide logic for turning on and off annotation * style enhancements * properly destroy crop region when toggling between prototypes

--- a/mt-static/plugins/ImageCropper/css/app.css
+++ b/mt-static/plugins/ImageCropper/css/app.css
@@ -1,3 +1,6 @@
+#annotation-settings {
+  display: none;
+}
 #annotation-settings .field {
   width: auto;
   float: left;
@@ -17,12 +20,16 @@
 #prototypes li.selected .proto_info {
   color: white;
 }
-#prototypes li:hover .proto_action {
+#prototypes li.inprogress .proto_progress {
   display: block;
+}
+#prototypes li.inprogress .proto_action {
+  display: none;
 }
 #prototypes li.nothumb .proto_action {
   display: none !important;
 }
+#prototypes li .proto_progress,
 #prototypes li .proto_action {
   display: none;
   position: absolute;
